--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -99,6 +99,7 @@ allow 109.71.252.182;
 allow 109.71.252.88;
 allow 109.71.252.97;
 allow 114.23.118.53;
+allow 114.35.245.150;
 allow 118.163.74.160;
 allow 121.78.28.166;
 allow 123.253.35.32;
@@ -201,7 +202,6 @@ allow 176.65.149.88;
 allow 176.65.149.96;
 allow 176.65.151.192;
 allow 176.65.151.193;
-allow 176.65.151.194;
 allow 176.97.114.202;
 allow 177.93.140.66;
 allow 178.17.170.144;
@@ -611,7 +611,6 @@ allow 195.47.238.92;
 allow 195.47.238.93;
 allow 195.80.151.242;
 allow 195.88.74.206;
-allow 196.196.200.100;
 allow 198.167.206.131;
 allow 198.251.84.163;
 allow 198.251.84.237;
@@ -706,7 +705,6 @@ allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:67c:e28:1::2;
 allow 2001:67c:e28:1::3;
-allow 2001:67c:e28:1::4;
 allow 2001:67c:e60:c0c:192:42:116:173;
 allow 2001:67c:e60:c0c:192:42:116:174;
 allow 2001:67c:e60:c0c:192:42:116:175;
@@ -746,6 +744,7 @@ allow 2001:67c:e60:c0c:192:42:116:216;
 allow 2001:67c:e60:c0c:192:42:116:217;
 allow 2001:67c:e60:c0c:192:42:116:218;
 allow 2001:67c:e60:c0c:192:42:116:219;
+allow 2001:b011:4006:54d6::b;
 allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
@@ -911,6 +910,7 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
+allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -921,6 +921,7 @@ allow 23.191.200.26;
 allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
+allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
 allow 23.191.200.5;
@@ -1598,6 +1599,7 @@ allow 2a12:a800:9:1:193:26:115:82;
 allow 2a12:a800:9:1:45:83:31:79;
 allow 2a12:a800:9:1:45:88:186:89;
 allow 2a12:a800:9:1:45:88:186:92;
+allow 2a12:de40:21:1be4::;
 allow 2a14:1ec7:1000:a633::1;
 allow 2c0f:6c0:0:2::6983;
 allow 2c0f:6c0:0:d::d28b;
@@ -1634,6 +1636,7 @@ allow 38.135.25.142;
 allow 38.135.25.143;
 allow 38.135.25.144;
 allow 38.135.25.2;
+allow 38.60.250.79;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1646,6 +1649,7 @@ allow 45.132.246.245;
 allow 45.13.225.69;
 allow 45.13.225.78;
 allow 45.133.74.53;
+allow 45.134.225.166;
 allow 45.134.225.36;
 allow 45.137.70.158;
 allow 45.137.99.16;
@@ -1800,7 +1804,6 @@ allow 62.72.47.105;
 allow 64.190.113.221;
 allow 64.190.76.2;
 allow 64.190.76.3;
-allow 64.190.76.4;
 allow 64.94.85.248;
 allow 65.108.251.47;
 allow 66.146.193.33;
@@ -1863,6 +1866,7 @@ allow 87.118.122.51;
 allow 87.120.222.33;
 allow 87.120.254.132;
 allow 88.151.192.2;
+allow 88.151.194.24;
 allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
@@ -1923,6 +1927,7 @@ allow 94.74.164.253;
 allow 94.74.164.89;
 allow 95.128.43.164;
 allow 95.143.193.125;
+allow 95.211.174.137;
 allow 95.211.244.28;
 allow 96.8.119.172;
 allow 98.128.173.33;
