--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -106,6 +106,7 @@ set_real_ip_from 123.253.35.32;
 set_real_ip_from 124.198.131.108;
 set_real_ip_from 124.198.131.223;
 set_real_ip_from 124.198.131.253;
+set_real_ip_from 124.198.131.29;
 set_real_ip_from 124.198.131.62;
 set_real_ip_from 124.198.132.13;
 set_real_ip_from 124.198.132.172;
@@ -113,6 +114,7 @@ set_real_ip_from 124.198.132.237;
 set_real_ip_from 124.198.132.52;
 set_real_ip_from 125.212.241.131;
 set_real_ip_from 125.253.56.119;
+set_real_ip_from 128.127.180.156;
 set_real_ip_from 128.31.0.13;
 set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
@@ -132,6 +134,7 @@ set_real_ip_from 149.102.153.38;
 set_real_ip_from 149.202.79.101;
 set_real_ip_from 149.202.79.129;
 set_real_ip_from 149.56.44.47;
+set_real_ip_from 150.129.10.139;
 set_real_ip_from 152.32.206.127;
 set_real_ip_from 152.53.106.19;
 set_real_ip_from 152.53.184.161;
@@ -223,6 +226,7 @@ set_real_ip_from 178.218.144.18;
 set_real_ip_from 178.218.144.51;
 set_real_ip_from 178.218.144.64;
 set_real_ip_from 178.218.144.96;
+set_real_ip_from 178.218.144.99;
 set_real_ip_from 179.35.1.246;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.159.194;
@@ -616,8 +620,10 @@ set_real_ip_from 195.47.238.91;
 set_real_ip_from 195.47.238.92;
 set_real_ip_from 195.47.238.93;
 set_real_ip_from 195.80.151.242;
+set_real_ip_from 195.88.74.206;
 set_real_ip_from 196.196.200.100;
-set_real_ip_from 198.167.206.213;
+set_real_ip_from 196.251.84.71;
+set_real_ip_from 198.167.206.156;
 set_real_ip_from 198.251.84.163;
 set_real_ip_from 198.251.84.237;
 set_real_ip_from 198.251.88.18;
@@ -931,7 +937,8 @@ set_real_ip_from 23.191.200.27;
 set_real_ip_from 23.191.200.28;
 set_real_ip_from 23.191.200.29;
 set_real_ip_from 23.191.200.30;
-set_real_ip_from 23.191.200.5;
+set_real_ip_from 23.191.200.31;
+set_real_ip_from 23.191.200.4;
 set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
@@ -1244,7 +1251,6 @@ set_real_ip_from 2a04:52c0:104:31e6::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:82c0::1;
-set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1535,6 +1541,7 @@ set_real_ip_from 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:a800:11:1:124:198:131:108;
 set_real_ip_from 2a12:a800:11:1:124:198:131:223;
 set_real_ip_from 2a12:a800:11:1:124:198:131:253;
+set_real_ip_from 2a12:a800:11:1:124:198:131:29;
 set_real_ip_from 2a12:a800:11:1:124:198:131:62;
 set_real_ip_from 2a12:a800:11:1:124:198:132:13;
 set_real_ip_from 2a12:a800:11:1:124:198:132:172;
@@ -1763,7 +1770,6 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
 set_real_ip_from 5.255.100.224;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
@@ -1793,6 +1799,7 @@ set_real_ip_from 5.2.79.190;
 set_real_ip_from 54.36.101.21;
 set_real_ip_from 54.36.108.162;
 set_real_ip_from 54.36.111.72;
+set_real_ip_from 54.36.187.187;
 set_real_ip_from 5.45.102.93;
 set_real_ip_from 5.45.104.176;
 set_real_ip_from 5.45.98.162;
@@ -1914,6 +1921,7 @@ set_real_ip_from 93.95.228.125;
 set_real_ip_from 93.95.231.118;
 set_real_ip_from 93.95.231.14;
 set_real_ip_from 93.95.231.88;
+set_real_ip_from 93.99.104.128;
 set_real_ip_from 93.99.104.18;
 set_real_ip_from 93.99.104.194;
 set_real_ip_from 93.99.104.40;
