--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -461,6 +461,7 @@ set_real_ip_from 185.241.208.185;
 set_real_ip_from 185.241.208.202;
 set_real_ip_from 185.241.208.204;
 set_real_ip_from 185.241.208.206;
+set_real_ip_from 185.241.208.54;
 set_real_ip_from 185.241.208.71;
 set_real_ip_from 185.241.208.81;
 set_real_ip_from 185.241.208.82;
@@ -633,6 +634,7 @@ set_real_ip_from 198.46.166.157;
 set_real_ip_from 198.50.212.160;
 set_real_ip_from 198.58.107.53;
 set_real_ip_from 198.96.155.3;
+set_real_ip_from 198.98.48.33;
 set_real_ip_from 198.98.50.199;
 set_real_ip_from 198.98.51.189;
 set_real_ip_from 198.98.51.249;
@@ -767,7 +769,6 @@ set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7400:c10d:216:3eff:fecd:511a;
 set_real_ip_from 202.182.99.129;
 set_real_ip_from 204.137.14.104;
-set_real_ip_from 204.137.14.105;
 set_real_ip_from 204.137.14.106;
 set_real_ip_from 204.137.14.92;
 set_real_ip_from 204.194.29.4;
@@ -926,6 +927,7 @@ set_real_ip_from 23.191.200.16;
 set_real_ip_from 23.191.200.17;
 set_real_ip_from 23.191.200.18;
 set_real_ip_from 23.191.200.19;
+set_real_ip_from 23.191.200.2;
 set_real_ip_from 23.191.200.20;
 set_real_ip_from 23.191.200.21;
 set_real_ip_from 23.191.200.22;
@@ -934,9 +936,7 @@ set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
 set_real_ip_from 23.191.200.28;
-set_real_ip_from 23.191.200.29;
 set_real_ip_from 23.191.200.3;
-set_real_ip_from 23.191.200.30;
 set_real_ip_from 23.191.200.4;
 set_real_ip_from 23.191.200.5;
 set_real_ip_from 23.191.200.6;
@@ -998,6 +998,7 @@ set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1362::2;
 set_real_ip_from 2605:6400:10:1ab:2605:6400:10:1ab;
 set_real_ip_from 2605:6400:10:253:2085:7b82:89a7:2145;
+set_real_ip_from 2605:6400:10:44f::1;
 set_real_ip_from 2605:6400:10:58f:8768:8283:1a62:bdc6;
 set_real_ip_from 2605:6400:10:75:1585:9b71:1c16:b1a1;
 set_real_ip_from 2605:6400:10:984:41e7:4ad6:a11e:cdcc;
@@ -1517,6 +1518,7 @@ set_real_ip_from 2a0e:e701:1198::1;
 set_real_ip_from 2a0e:fa00:0:30::1;
 set_real_ip_from 2a0f:85c1:356:231b::1;
 set_real_ip_from 2a0f:85c1:356:3238::1;
+set_real_ip_from 2a0f:85c1:356:5c50::1;
 set_real_ip_from 2a0f:cdc6:500:11e3::2;
 set_real_ip_from 2a0f:df00:0:255::194;
 set_real_ip_from 2a0f:df00:0:255::195;
@@ -1576,14 +1578,18 @@ set_real_ip_from 2a12:a800:2:1:45:141:215:110;
 set_real_ip_from 2a12:a800:2:1:45:141:215:111;
 set_real_ip_from 2a12:a800:2:1:45:141:215:114;
 set_real_ip_from 2a12:a800:2:1:45:141:215:169;
+set_real_ip_from 2a12:a800:2:1:45:141:215:17;
+set_real_ip_from 2a12:a800:2:1:45:141:215:19;
 set_real_ip_from 2a12:a800:2:1:45:141:215:200;
 set_real_ip_from 2a12:a800:2:1:45:141:215:21;
 set_real_ip_from 2a12:a800:2:1:45:141:215:238;
 set_real_ip_from 2a12:a800:2:1:45:141:215:28;
+set_real_ip_from 2a12:a800:2:1:45:141:215:40;
 set_real_ip_from 2a12:a800:2:1:45:141:215:56;
 set_real_ip_from 2a12:a800:2:1:45:141:215:61;
 set_real_ip_from 2a12:a800:2:1:45:141:215:62;
 set_real_ip_from 2a12:a800:2:1:45:141:215:63;
+set_real_ip_from 2a12:a800:2:1:45:141:215:80;
 set_real_ip_from 2a12:a800:2:1:45:141:215:88;
 set_real_ip_from 2a12:a800:2:1:45:141:215:90;
 set_real_ip_from 2a12:a800:2:1:45:141:215:95;
@@ -1603,13 +1609,14 @@ set_real_ip_from 2a12:a800:9:1:193:26:115:82;
 set_real_ip_from 2a12:a800:9:1:45:83:31:79;
 set_real_ip_from 2a12:a800:9:1:45:88:186:89;
 set_real_ip_from 2a12:a800:9:1:45:88:186:92;
-set_real_ip_from 2a12:de40:21:1be4::;
 set_real_ip_from 2a14:1ec7:1000:a633::1;
 set_real_ip_from 2c0f:6c0:0:2::6983;
 set_real_ip_from 2c0f:6c0:0:d::d28b;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.184.236.104;
+set_real_ip_from 31.220.75.237;
+set_real_ip_from 31.40.204.206;
 set_real_ip_from 31.44.238.25;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.50.124;
@@ -1639,7 +1646,6 @@ set_real_ip_from 38.135.25.142;
 set_real_ip_from 38.135.25.143;
 set_real_ip_from 38.135.25.144;
 set_real_ip_from 38.135.25.2;
-set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.242;
 set_real_ip_from 38.97.116.243;
 set_real_ip_from 38.97.116.244;
@@ -1672,14 +1678,18 @@ set_real_ip_from 45.141.215.110;
 set_real_ip_from 45.141.215.111;
 set_real_ip_from 45.141.215.114;
 set_real_ip_from 45.141.215.169;
+set_real_ip_from 45.141.215.17;
+set_real_ip_from 45.141.215.19;
 set_real_ip_from 45.141.215.200;
 set_real_ip_from 45.141.215.21;
 set_real_ip_from 45.141.215.238;
 set_real_ip_from 45.141.215.28;
+set_real_ip_from 45.141.215.40;
 set_real_ip_from 45.141.215.56;
 set_real_ip_from 45.141.215.61;
 set_real_ip_from 45.141.215.62;
 set_real_ip_from 45.141.215.63;
+set_real_ip_from 45.141.215.80;
 set_real_ip_from 45.141.215.88;
 set_real_ip_from 45.141.215.90;
 set_real_ip_from 45.141.215.95;
@@ -1689,6 +1699,7 @@ set_real_ip_from 45.145.93.133;
 set_real_ip_from 45.148.10.111;
 set_real_ip_from 45.154.98.33;
 set_real_ip_from 45.38.20.123;
+set_real_ip_from 45.38.20.153;
 set_real_ip_from 45.58.190.74;
 set_real_ip_from 45.61.185.172;
 set_real_ip_from 45.66.35.10;
@@ -1864,7 +1875,6 @@ set_real_ip_from 87.118.122.51;
 set_real_ip_from 87.120.222.33;
 set_real_ip_from 87.120.254.132;
 set_real_ip_from 88.151.192.2;
-set_real_ip_from 88.151.194.24;
 set_real_ip_from 88.80.20.86;
 set_real_ip_from 88.80.26.2;
 set_real_ip_from 88.80.26.3;
